@@ -1,0 +1,45 @@
+/* DO NOT EDIT THIS FILE - it is machine generated */
+#include <jni.h>
+/* Header for class org_0002fxfce_0002fexo_0002fMimeDatabase */
+
+#ifndef _Included_org_0002fxfce_0002fexo_0002fMimeDatabase
+#define _Included_org_0002fxfce_0002fexo_0002fMimeDatabase
+#ifdef __cplusplus
+extern "C" {
+#endif
+/*
+ * Class:     org_0002fxfce_0002fexo_0002fMimeDatabase
+ * Method:    exo_mime_database_get_default
+ * Signature: ()I
+ */
+JNIEXPORT jint JNICALL Java_org_0002fxfce_0002fexo_0002fMimeDatabase_exo_1mime_1database_1get_1default
+  (JNIEnv *, jclass);
+
+/*
+ * Class:     org_0002fxfce_0002fexo_0002fMimeDatabase
+ * Method:    exo_mime_database_get_info
+ * Signature: (ILjava/lang/String;)I
+ */
+JNIEXPORT jint JNICALL Java_org_0002fxfce_0002fexo_0002fMimeDatabase_exo_1mime_1database_1get_1info
+  (JNIEnv *, jclass, jint, jstring);
+
+/*
+ * Class:     org_0002fxfce_0002fexo_0002fMimeDatabase
+ * Method:    exo_mime_database_get_info_for_file
+ * Signature: (ILjava/lang/String;)I
+ */
+JNIEXPORT jint JNICALL Java_org_0002fxfce_0002fexo_0002fMimeDatabase_exo_1mime_1database_1get_1info_1for_1file
+  (JNIEnv *, jclass, jint, jstring);
+
+/*
+ * Class:     org_0002fxfce_0002fexo_0002fMimeDatabase
+ * Method:    exo_mime_database_get_info_from_file_name
+ * Signature: (ILjava/lang/String;)I
+ */
+JNIEXPORT jint JNICALL Java_org_0002fxfce_0002fexo_0002fMimeDatabase_exo_1mime_1database_1get_1info_1from_1file_1name
+  (JNIEnv *, jclass, jint, jstring);
+
+#ifdef __cplusplus
+}
+#endif
+#endif
